fixed helicopter from overflowing web page

--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -9,6 +9,7 @@
   align-items: center;
   font-family: 'Open Sans', sans-serif;
   position: relative;
+  overflow: hidden;
 
   .loader {
     position: absolute;
